crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_no_selector.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": [
      {
        "node": {
          "type": "stylerule",
          "selectors": {
            "node": [
              {
                "node": [],
                "start": 0,
                "end": 0
              }
            ],
            "start": 0,
            "end": 0
          },
          "node": {
            "type": "style-declaration",
            "declarations": [],
            "rules": []
          },
          "start": 0,
          "end": 2
        },
        "start": 0,
        "end": 2
      }
    ]
  },
  "start": 0,
  "end": 2
}
