crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_quotes.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            },
            {
              "type": "pseudo-element",
              "value": {
                "before": [
                  [
                    {
                      "kind": "Colon",
                      "offset": 1,
                      "len": 1
                    },
                    {
                      "kind": "Colon",
                      "offset": 2,
                      "len": 1
                    }
                  ],
                  {
                    "kind": "Ident",
                    "offset": 3,
                    "len": 6
                  }
                ]
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 10,
        "len": 1
      },
      "declarations": [
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 16,
            "len": 7
          },
          "colon": {
            "kind": "Colon",
            "offset": 23,
            "len": 1
          },
          "value": {
            "values": [
              {
                "kind": "Whitespace",
                "offset": 24,
                "len": 1
              },
              {
                "kind": "String",
                "offset": 25,
                "len": 12
              }
            ]
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "offset": 37,
            "len": 1
          }
        },
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 43,
            "len": 7
          },
          "colon": {
            "kind": "Colon",
            "offset": 50,
            "len": 1
          },
          "value": {
            "values": [
              {
                "kind": "Whitespace",
                "offset": 51,
                "len": 1
              },
              {
                "kind": "String",
                "offset": 52,
                "len": 7
              }
            ]
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "offset": 59,
            "len": 1
          }
        }
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 61,
        "len": 1
      }
    }
  ]
}
