crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_raw_decl.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": [
      {
        "node": {
          "type": "stylerule",
          "selectors": {
            "node": [
              {
                "node": [
                  {
                    "type": "tag",
                    "value": {
                      "Html": "A"
                    }
                  }
                ],
                "start": 0,
                "end": 2
              }
            ],
            "start": 0,
            "end": 2
          },
          "node": {
            "type": "style-declaration",
            "declarations": [
              {
                "node": {
                  "type": "property",
                  "name": "color",
                  "value": [
                    {
                      "node": {
                        "kind": "Ident",
                        "value": "a"
                      },
                      "start": 11,
                      "end": 12
                    },
                    {
                      "node": {
                        "kind": "Whitespace"
                      },
                      "start": 12,
                      "end": 20
                    },
                    {
                      "node": {
                        "kind": "Ident",
                        "value": "b"
                      },
                      "start": 20,
                      "end": 21
                    },
                    {
                      "node": {
                        "kind": "Whitespace"
                      },
                      "start": 21,
                      "end": 23
                    }
                  ],
                  "important": false
                },
                "start": 3,
                "end": 24
              }
            ],
            "rules": []
          },
          "start": 2,
          "end": 26
        },
        "start": 0,
        "end": 26
      }
    ]
  },
  "start": 0,
  "end": 26
}
