crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_rule_no_semicolon.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": [
      {
        "node": {
          "type": "stylerule",
          "selectors": {
            "node": [
              {
                "node": [
                  {
                    "type": "tag",
                    "value": {
                      "Html": "A"
                    }
                  }
                ],
                "start": 0,
                "end": 1
              }
            ],
            "start": 0,
            "end": 1
          },
          "node": {
            "type": "style-declaration",
            "declarations": [
              {
                "node": {
                  "type": "property",
                  "name": "color",
                  "value": {
                    "Named": {
                      "type": "black"
                    }
                  },
                  "important": false
                },
                "start": 2,
                "end": 13
              }
            ],
            "rules": []
          },
          "start": 1,
          "end": 14
        },
        "start": 0,
        "end": 14
      }
    ]
  },
  "start": 0,
  "end": 14
}
